feat: release visual director alpha.18
